--- a/potrawy.html
+++ b/potrawy.html
@@ -13,7 +13,7 @@
 	</header>
 		<nav>
 		<ul class="menu">
-			<li><a href="moje_hobby.html">Strona główna</a></li>
+			<li><a href="index.html">Strona główna</a></li>
 			<li><a href="#">Potrawy</a>
 				<ul>
 					<li><a class="active" href="potrawy.html">Galeria</a></li>
