--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Moje hobby - dietetyka</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="Moje_Hobby.css">
-		<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+		<script src="jquery-3.6.0.min.js"></script>
 	</head>
 	<body>
 			<header>
