--- a/potrawy.html
+++ b/potrawy.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="Potrawy.css">
-		<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+		<script src="jquery-3.6.0.min.js"></script>
 	</head>
 	<body>
 	<header id ="tytul" class="Header">
