--- a/przepisy.html
+++ b/przepisy.html
@@ -5,7 +5,7 @@
 		<title>Tabelki odżywcze</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="tabelki.css">
-		<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+		<script src="jquery-3.6.0.min.js"></script>
 	</head>
 	<body>
 		<header>
